client/src-tauri/build_error.txt
    Checking client v0.1.0 (C:\Users\Zhitn\Desktop\Vvoice\client\src-tauri)
error[E0425]: cannot find function, tuple struct or tuple variant `UnboundedChannel` in module `tokio::sync::mpsc`
   --> src\mumble.rs:197:47
    |
197 |         let (tx, mut rx) = tokio::sync::mpsc::UnboundedChannel::<MumblePacket>();
    |                                               ^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `unbounded_channel`
    |
   ::: C:\Users\Zhitn\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\tokio-1.49.0\src\sync\mpsc\unbounded.rs:95:1
    |
 95 | pub fn unbounded_channel<T>() -> (UnboundedSender<T>, UnboundedReceiver<T>) {
    | --------------------------------------------------------------------------- similarly named function `unbounded_channel` defined here

warning: unused import: `stream::SplitStream`
 --> src\mumble.rs:2:54
  |
2 | use futures::{SinkExt, StreamExt, stream::SplitSink, stream::SplitStream};
  |                                                      ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Context`
 --> src\mumble.rs:4:22
  |
4 | use anyhow::{Result, Context};
  |                      ^^^^^^^

warning: unused import: `Buf`
 --> src\mumble.rs:9:23
  |
9 | use bytes::{BytesMut, Buf};
  |                       ^^^

warning: unused imports: `Deserialize` and `Serialize`
  --> src\mumble.rs:11:13
   |
11 | use serde::{Serialize, Deserialize};
   |             ^^^^^^^^^  ^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\lib.rs:3:5
  |
3 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0425`.
warning: `client` (lib) generated 5 warnings
error: could not compile `client` (lib) due to 1 previous error; 5 warnings emitted
